--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# exclude contents of data dir
+data/*
+# exception for .gitkeepdir file to keep data dir in repo...
+!data/.gitkeepdir
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
