--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ pytz==2017.2
 pyzmq==16.0.2
 qtconsole==4.3.0
 scandir==1.5
+scikit-learn==0.18.1
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
