--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ model/*
 !data/.gitkeepdir
 !data/dev_submission.csv
 
+#exclude bin config file
+bin/*.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
